-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0
-
-
aae5c89d5 (dev), 69180500a (6.7)
isAutoRepeat does not seems to work with Webassembly, though it works for Desktop.
Attached example shows this.
For Gerrit Dashboard: QTBUG-125222 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
560473,2 | wasm: add autorepeat for QKeyEvent | dev | qt/qtbase | Status: MERGED | +2 | 0 |
563014,2 | wasm: add autorepeat for QKeyEvent | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |